@@ -21,20 +21,15 @@ package com.hedera.hashgraph.sdk;
 
 import com.google.errorprone.annotations.Var;
 import com.google.protobuf.ByteString;
-import java8.util.J8Arrays;
-import java8.util.stream.Collectors;
-import java8.util.stream.IntStream;
-import java8.util.stream.IntStreams;
-import java8.util.stream.Stream;
-import org.bouncycastle.util.encoders.DecoderException;
-import org.bouncycastle.util.encoders.Hex;
-
-import javax.annotation.Nonnegative;
-import javax.annotation.Nullable;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
+import javax.annotation.Nullable;
+import org.bouncycastle.util.encoders.DecoderException;
+import org.bouncycastle.util.encoders.Hex;
 
 // an implementation of function selector and parameter encoding as specified here:
 // https://solidity.readthedocs.io/en/v0.5.7/abi-spec.html#
@@ -99,7 +94,7 @@ public final class ContractFunctionParameters {
     }
 
     private static ByteString encodeArray(Stream<ByteString> elements) {
-        List<ByteString> list = elements.collect(Collectors.toList());
+        List<ByteString> list = elements.toList();
 
         return int256(list.size(), 32)
             .concat(ByteString.copyFrom(list));
@@ -155,7 +150,7 @@ public final class ContractFunctionParameters {
 
     static byte[] getTruncatedBytes(BigInteger bigInt, int bitWidth) {
         byte[] bytes = bigInt.toByteArray();
-        int expectedBytes = bitWidth/8;
+        int expectedBytes = bitWidth / 8;
         return bytes.length <= expectedBytes ?
             bytes :
             Arrays.copyOfRange(bytes, bytes.length - expectedBytes, bytes.length);
@@ -187,7 +182,7 @@ public final class ContractFunctionParameters {
         return rem == 32
             ? input
             : (negative ? negativePadding : padding).substring(0, rem)
-            .concat(input);
+                .concat(input);
     }
 
     static ByteString leftPad32(byte[] input, boolean negative) {
@@ -236,9 +231,9 @@ public final class ContractFunctionParameters {
      * @throws NullPointerException if any value in `strings` is null
      */
     public ContractFunctionParameters addStringArray(String[] strings) {
-        List<ByteString> byteStrings = J8Arrays.stream(strings)
+        List<ByteString> byteStrings = Arrays.stream(strings)
             .map(ContractFunctionParameters::encodeString)
-            .collect(Collectors.toList());
+            .toList();
 
         ByteString argBytes = encodeDynArr(byteStrings);
 
@@ -266,9 +261,9 @@ public final class ContractFunctionParameters {
      * @return {@code this}
      */
     public ContractFunctionParameters addBytesArray(byte[][] param) {
-        List<ByteString> byteArrays = J8Arrays.stream(param)
+        List<ByteString> byteArrays = Arrays.stream(param)
             .map(ContractFunctionParameters::encodeBytes)
-            .collect(Collectors.toList());
+            .toList();
 
         args.add(new Argument("bytes[]", encodeDynArr(byteArrays), true));
 
@@ -301,7 +296,7 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addBytes32Array(byte[][] param) {
         // array of fixed-size elements
-        Stream<ByteString> byteArrays = J8Arrays.stream(param)
+        Stream<ByteString> byteArrays = Arrays.stream(param)
             .map(ContractFunctionParameters::encodeBytes32);
 
         args.add(new Argument("bytes32[]", encodeArray(byteArrays), true));
@@ -716,11 +711,11 @@ public final class ContractFunctionParameters {
      * @return {@code this}
      */
     public ContractFunctionParameters addInt8Array(byte[] intArray) {
-        IntStream intStream = IntStreams.range(0, intArray.length).map(idx -> intArray[idx]);
+        IntStream intStream = IntStream.range(0, intArray.length).map(idx -> intArray[idx]);
 
         @Var ByteString arrayBytes = ByteString.copyFrom(
             intStream.mapToObj(i -> int256(i, 8))
-                .collect(Collectors.toList()));
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -737,8 +732,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt16Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 16))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 16))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -755,8 +750,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt24Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 24))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 24))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -773,8 +768,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt32Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 32))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 32))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -791,8 +786,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt40Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 40))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 40))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -809,8 +804,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt48Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 48))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 48))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -827,8 +822,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt56Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 56))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 56))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -845,8 +840,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt64Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 64))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> int256(i, 64))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -863,8 +858,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt72Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 72))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 72))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -881,8 +876,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt80Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 80))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 80))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -899,8 +894,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt88Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 88))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 88))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -917,8 +912,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt96Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 96))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 96))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -935,8 +930,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt104Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 104))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 104))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -953,8 +948,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt112Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 112))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 112))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -971,8 +966,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt120Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 120))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 120))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -989,8 +984,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt128Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 128))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 128))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1007,8 +1002,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt136Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 136))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 136))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1025,8 +1020,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt144Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 144))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 144))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1043,8 +1038,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt152Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 152))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 152))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1061,8 +1056,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt160Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 160))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 160))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1079,8 +1074,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt168Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 168))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 168))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1097,8 +1092,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt176Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 176))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 176))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1115,8 +1110,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt184Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 184))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 184))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1133,8 +1128,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt192Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 192))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 192))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1151,8 +1146,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt200Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 200))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 200))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1169,8 +1164,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt208Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 208))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 208))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1187,8 +1182,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt216Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 216))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 216))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1205,8 +1200,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt224Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 224))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 224))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1223,8 +1218,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt232Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 232))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 232))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1241,8 +1236,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt240Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 240))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 240))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1259,8 +1254,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt248Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 248))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 248))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1277,8 +1272,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt256Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> int256(i, 256))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> int256(i, 256))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1303,9 +1298,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 16-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1318,9 +1313,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 24-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1333,9 +1328,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 32-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1348,9 +1343,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 40-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1363,9 +1358,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 48-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1378,9 +1373,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 56-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1393,9 +1388,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 64-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1408,9 +1403,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 72-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1424,9 +1419,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 80-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1440,9 +1435,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 88-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1456,9 +1451,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 96-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1472,9 +1467,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 104-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1488,9 +1483,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 112-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1504,9 +1499,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 120-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1520,9 +1515,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 128-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1536,9 +1531,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 136-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1552,9 +1547,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 144-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1568,9 +1563,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 152-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1584,9 +1579,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 160-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1600,9 +1595,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 168-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1616,9 +1611,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 176-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1632,9 +1627,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 184-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1648,9 +1643,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 192-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1664,9 +1659,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 200-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1680,9 +1675,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 208-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1696,9 +1691,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 216-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1712,9 +1707,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 224-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1728,9 +1723,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 232-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1744,9 +1739,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 240-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1760,9 +1755,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 248-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1776,9 +1771,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 256-bit unsigned integer.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1799,11 +1794,11 @@ public final class ContractFunctionParameters {
      * @return {@code this}
      */
     public ContractFunctionParameters addUint8Array(byte[] intArray) {
-        IntStream intStream = IntStreams.range(0, intArray.length).map(idx -> intArray[idx]);
+        IntStream intStream = IntStream.range(0, intArray.length).map(idx -> intArray[idx]);
 
         @Var ByteString arrayBytes = ByteString.copyFrom(
             intStream.mapToObj(i -> uint256(i, 8))
-                .collect(Collectors.toList()));
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1814,17 +1809,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 16-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint16Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 16))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 16))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1835,17 +1830,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 24-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint24Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 24))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 24))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1856,17 +1851,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 32-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint32Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 32))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 32))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1877,17 +1872,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 40-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint40Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 40))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 40))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1898,17 +1893,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 48-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint48Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 48))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 48))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1919,17 +1914,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 56-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint56Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 56))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 56))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1940,17 +1935,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 64-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint64Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 64))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).mapToObj(i -> uint256(i, 64))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1961,9 +1956,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 72-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -1971,8 +1966,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint72Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 72))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 72))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1983,9 +1978,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 80-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -1993,8 +1988,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint80Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 80))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 80))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2005,9 +2000,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 88-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2015,8 +2010,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint88Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 88))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 88))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2027,9 +2022,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 96-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2037,8 +2032,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint96Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 96))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 96))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2049,9 +2044,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 104-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2059,8 +2054,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint104Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 104))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 104))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2071,9 +2066,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 112-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2081,8 +2076,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint112Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 112))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 112))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2093,9 +2088,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 120-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2103,8 +2098,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint120Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 120))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 120))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2115,9 +2110,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 128-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2125,8 +2120,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint128Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 128))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 128))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2137,9 +2132,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 136-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2147,8 +2142,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint136Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 136))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 136))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2159,9 +2154,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 144-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2169,8 +2164,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint144Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 144))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 144))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2181,9 +2176,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 152-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2191,8 +2186,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint152Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 152))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 152))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2203,9 +2198,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 160-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2213,8 +2208,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint160Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 160))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 160))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2225,9 +2220,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 168-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2235,8 +2230,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint168Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 168))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 168))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2247,9 +2242,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 176-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2257,8 +2252,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint176Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 176))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 176))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2269,9 +2264,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 184-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2279,8 +2274,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint184Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 184))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 184))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2291,9 +2286,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 192-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2301,8 +2296,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint192Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 192))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 192))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2313,9 +2308,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 200-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2323,8 +2318,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint200Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 200))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 200))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2335,9 +2330,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 208-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2345,8 +2340,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint208Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 208))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 208))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2357,9 +2352,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 216-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2367,8 +2362,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint216Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 216))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 216))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2379,9 +2374,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 224-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2389,8 +2384,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint224Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 224))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 224))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2401,9 +2396,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 232-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2411,8 +2406,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint232Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 232))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 232))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2423,9 +2418,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 240-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2433,8 +2428,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint240Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 240))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 240))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2445,9 +2440,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 248-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2455,8 +2450,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint248Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 248))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 248))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2467,9 +2462,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 256-bit unsigned integers.
-
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
-     * sign-extended to 32 bytes).
+     * <p>
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
+     * bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2477,8 +2472,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint256Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            J8Arrays.stream(intArray).map(i -> uint256(i, 256))
-                .collect(Collectors.toList()));
+            Arrays.stream(intArray).map(i -> uint256(i, 256))
+                .toList());
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2488,16 +2483,15 @@ public final class ContractFunctionParameters {
     }
 
     /**
-     * Add a {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity address parameter with the type
-     * {@code address}.
+     * Add a {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity address parameter with the type {@code address}.
      * <p>
-     * Note: adding a {@code address payable} or {@code contract} parameter must also use
-     * this function as the ABI does not support those types directly.
+     * Note: adding a {@code address payable} or {@code contract} parameter must also use this function as the ABI does
+     * not support those types directly.
      *
      * @param address The address to be added
      * @return {@code this}
-     * @throws IllegalArgumentException if the address is not exactly {@value ADDRESS_LEN_HEX}
-     *                                  characters long or fails to decode as hexadecimal.
+     * @throws IllegalArgumentException if the address is not exactly {@value ADDRESS_LEN_HEX} characters long or fails
+     *                                  to decode as hexadecimal.
      */
     public ContractFunctionParameters addAddress(String address) {
         byte[] addressBytes = decodeAddress(address);
@@ -2508,18 +2502,17 @@ public final class ContractFunctionParameters {
     }
 
     /**
-     * Add an array of {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity addresses as a
-     * {@code address[]} param.
+     * Add an array of {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity addresses as a {@code address[]} param.
      *
      * @param addresses The array of addresses to be added
      * @return {@code this}
-     * @throws IllegalArgumentException if any value is not exactly {@value ADDRESS_LEN_HEX}
-     *                                  characters long or fails to decode as hexadecimal.
+     * @throws IllegalArgumentException if any value is not exactly {@value ADDRESS_LEN_HEX} characters long or fails to
+     *                                  decode as hexadecimal.
      * @throws NullPointerException     if any value in the array is null.
      */
     public ContractFunctionParameters addAddressArray(String[] addresses) {
         ByteString addressArray = encodeArray(
-            J8Arrays.stream(addresses).map(a -> {
+            Arrays.stream(addresses).map(a -> {
                 byte[] address = decodeAddress(a);
                 return leftPad32(ByteString.copyFrom(address));
             }));
@@ -2536,24 +2529,21 @@ public final class ContractFunctionParameters {
      * @param address  a hex-encoded {@value ADDRESS_LEN_HEX}-character Solidity address.
      * @param selector a
      * @return {@code this}
-     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX}
-     *                                  characters or {@code selector} is not
-     *                                  {@value SELECTOR_LEN} bytes.
+     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX} characters or
+     *                                  {@code selector} is not {@value SELECTOR_LEN} bytes.
      */
     public ContractFunctionParameters addFunction(String address, byte[] selector) {
         return addFunction(decodeAddress(address), selector);
     }
 
     /**
-     * Add a Solidity function reference as a {@value ADDRESS_LEN}-byte contract address and a
-     * constructed {@link ContractFunctionSelector}. The {@link ContractFunctionSelector}
-     * may not be modified after this call.
+     * Add a Solidity function reference as a {@value ADDRESS_LEN}-byte contract address and a constructed
+     * {@link ContractFunctionSelector}. The {@link ContractFunctionSelector} may not be modified after this call.
      *
      * @param address  The address used in the function to be added
      * @param selector The selector used in the function to be added
      * @return {@code this}
-     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX}
-     *                                  characters.
+     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX} characters.
      */
     public ContractFunctionParameters addFunction(String address, ContractFunctionSelector selector) {
         // allow the `FunctionSelector` to be reused multiple times
